Mozilla test page minus CSS practice

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>Kelly's Mozilla Test Page</title>
+    <link href="styles/style.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Mozilla is cool</h1>
+    <h1>Mozilla is cool...</h1>
+    <h2>but not as cool as DPI-691M!</h2>
     <img src="images/firefox-icon.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
 
     <p>At Mozilla, we’re a global community of</p>
@@ -16,8 +18,8 @@
       <li>builders</li>
     </ul>
 
-    <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
+    <p>working together to keep the Internet alive and accessible, so that Kelly can refer people to Google instead of answering their questions directly.</p>
 
-    <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
+    <p>Read the <a href="https://www.marxists.org/archive/marx/works/1848/communist-manifesto/">Communist Manifesto</a> to learn even more about the values and principles that guide the pursuit of happiness Kid Cudi style.</p>
   </body>
 </html>
