--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Kelly's Mozilla Test Page</title>
-    <link href="styles/style.css" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Mozilla is cool...</h1>
