--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
-<body>
-    <h1>Hello, world!<h1>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>My test page</title>
+  </head>
+  <body>
+
+  	<h1> You've been rick-rolled!</h1>
+  	<h2> Please see below for assignment content </h2>
+    <img src="images/firefox-icon.png" alt="My test image">
+
+
+<p><h3>At Mozilla, we’re a global community of</h3></p>
+
+<ul>
+  <li>rick-rollers!</li>
+  <li>technologists</li>
+  <li>thinkers</li>
+  <li>builders</li>
+</ul>
+
+<p>working together to keep the internet alive and accessible, so people can look up coding challenges. </p>
+
+<p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a>
+ to learn even more.
+
+  </body>
 </html>
